# Interactive-Scene-Explorer

./: config.py  img2img.py  rotate.py  text2img.py  vlm_qa.py
backend/: .env.example  README.md  __init__.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  base.py  diffusion_image_generator.py  mock_models.py
backend/app/core/: config.py  errors.py
backend/app/db/: models.py  repositories.py  sqlite_repository.py
backend/app/routes/: demo.py  jobs.py  scenes.py  stories.py
backend/app/schemas/: __init__.py  click_target.py  common.py  demo.py  hotspot.py  job.py  scene.py  story.py  transition.py
backend/app/services/: click_resolver.py  demo_service.py  generated_asset_cleaner.py  generation_queue.py  hotspot_detector.py  hotspot_geometry.py  image_generator.py  job_service.py  next_scene_planner.py  scene_presenter.py  scene_service.py  stale_background_job.py  storage.py  story_planner.py  story_service.py  transition_builder.py
backend/app/workers/: __init__.py  click_scene_worker.py  create_story_worker.py
backend/tests/: test_api_contract.py  test_click_resolver.py  test_generated_asset_cleaner.py  test_generation_queue.py  test_sqlite_repository.py  test_stale_background_jobs.py  test_transition_builder.py
