[project]
name = "interactive-scene-explorer-backend"
version = "0.1.0"
description = "FastAPI backend for the Interactive AI Scene Explorer mock MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
]
sdxl = [
  "diffusers>=0.35",
  "accelerate>=1.0",
  "peft>=0.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"
